--- a/index.qmd
+++ b/index.qmd
@@ -1,6 +1,6 @@
 ---
-title: "Davide Gentile"
-subtitle: "Causal inference to improve human decisions"
+title: "From automated predictions to human decisions"
+subtitle: "Integrating causality in data science"
 about:
   template: trestles
   image: images/Roseto_Degli_Abruzzo.jpg
@@ -13,10 +13,14 @@ about:
 
 I specialize in statistics, machine learning, and human-subjects experiments. I've built this website to collect projects, notes, and resources about using causal inference to improve human decisions.
 
+human domian knowledge, human in the loop
+
+explain model decisions with causality; limits of post-hoc explanations
+
+from predictions and post-hoc explanations to causality - what is the effect of intervening on this? what would be the most effective way to change the coutome?
+
 +-------------------------------------------------+
 | #### My sites                                   |
-+-------------------------------------------------+
-| [Services](https://gentiled.github.io/services) |
 +-------------------------------------------------+
 | [Projects](https://gentiled.github.io/work)     |
 +-------------------------------------------------+
