--- a/blog.qmd
+++ b/blog.qmd
@@ -1,6 +1,6 @@
 ---
-title: "Publications"
-#subtitle: "Some thoughts on causal inference and human factors research"
+#title: "Publications"
+subtitle: "Publications"
 #listing:
   #contents: blogposts
   #sort: "date desc"
@@ -15,22 +15,36 @@ title-block-banner: false
 
 #### **Peer reviewed journal articles**
 
-**Gentile D.**, Donmez, B., & Jamieson, G. A. (Accepted, 2024). Human performance effects of combining counterfactual explanations with normative and contrastive explanations in supervised machine learning for automated decision assistance. Submitted to the International Journal of Human-Computer Studies.
+**Gentile D.**, Donmez, B., & Jamieson, G. A. (Accepted, 2024). Human performance effects of combining counterfactual explanations with normative and contrastive explanations in supervised machine learning for automated decision assistance. In the *International Journal of Human-Computer Studies*.
 
-**Gentile D.**, Jamieson, G. A., & Donmez B. (2023). Influence of Individual Differences on the Effectiveness of Post-hoc Explanations in Automation Reliance Behavior. Submitted to the journal of Cognitive Engineering and Decision-Making.
+**Gentile D.**, Donmez, B., & Jamieson, G. A. (2023). [Human Performance Consequences of Normative and Contrastive Explanations: An Experiment in Machine Learning for Reliability Maintenance](https://www.sciencedirect.com/science/article/pii/S0004370223000917). *Artificial Intelligence*, 103945.
 
-**Gentile D.**, Donmez, B., & Jamieson, G. A. (2023). Human Performance Consequences of Normative and Contrastive Explanations: An Experiment in Machine Learning for Reliability Maintenance. Artificial Intelligence, 103945.
+Nguyen, T., **Gentile D.**, Jamieson, G. A., Gosine, R., & Purmhedi, H. (2023). [Designing a Glyph-based Polar Chart to Interpret the Results of Machine Learning Models](https://journals.sagepub.com/doi/abs/10.1177/10648046231166047). In *Ergonomics in Design: The Quarterly of Human Factors Applications*.
 
-Nguyen, T., **Gentile D.**, Jamieson, G. A., Gosine, R., & Purmhedi, H. (2023). Designing a Glyph-based Polar Chart to Interpret the Results of Machine Learning Models. In Ergonomics in Design: The Quarterly of Human Factors Applications.
+#### **Peer reviewed journal articles submitted** 
 
-**Gentile D.**, Jamieson G. A., Donmez B. (2021). Evaluating Human Understanding in Explainable AI Systems. In ACM Human Factors in Computing Systems Workshop on Operationalizing Human-Centered Perspectives in Explainable AI, CHI2021, Yokohama, Japan.
+**Gentile D.**, Jamieson, G. A., & Donmez B. (2023). Influence of Individual Differences on the Effectiveness of Post-hoc Explanations in Automation Reliance Behavior. Submitted to the *Journal of Cognitive Engineering and Decision-Making*.
+
+#### **Peer reviewed articles in preparation**
+
+**Gentile D.**, & Jamieson, G. A. (2025). Effects of Automation transpareancy on human performance under different workload contrainsts. Human Factors.
+
+Lawson-Jack K., **Gentile D.**, & Jamieson, G. A. (2025). Progress on a Taxonomy of Heterogeneity in Small Modular Reactor Operations. In the *14th International Topical Meeting on* *Nuclear Plant Instrumentation and Control & Human-Machine Interface Technology (NPIC&HMIT)*, Chicago.
+
+**Gentile D.**, Liang Y., & Jamieson, G. A. (2025). Assessing Measures of Human Performance in the Nuclear Control Room. In the *14th International Topical Meeting on* *Nuclear Plant Instrumentation and Control & Human-Machine Interface Technology (NPIC&HMIT)*, Chicago.
+
+#### **Peer reviewed conference/workshop proceedings**
+
+**Gentile D.**, Jamieson G. A., Donmez B. (2021). [Evaluating Human Understanding in Explainable AI Systems](https://hfast.mie.utoronto.ca/wp-content/uploads/HCXAI2021_paper_25.pdf). In *ACM Human Factors in Computing Systems (CHI) Workshop on Operationalizing Human-Centered Perspectives in Explainable AI*, CHI2021, Yokohama, Japan.
 
 #### **Presentations**
 
-**Gentile D.**, Donmez, B., & Jamieson, G. A. (2024). Enhancing Human Performance with Post-hoc Explanations in Machine Learning-based Decision Support Systems. Oral presentation at the 7th International Conference on Intelligent Human Systems Integration: Integrating People and Intelligent Systems, Palermo, Italy
+**Gentile D.**, Jamieson G. A., Donmez B. (2024). Supporting human performance with explanation interfaces in automated decision assistance for process control operations. In *Disruptive, Innovative and Emerging Technologies (DIET) Conference 2024 of the Canadian Nuclear Society (CNS) (organized in cooperation with the International Atomic Energy Agency).*
 
-**Gentile D.** (2023). Designing for human-AI interactions in industrial condition monitoring. Oral presentation at the AI Seminar in GAIA (Global Artificial Intelligence Accelerator), Ericsson Montreal, QC.
+**Gentile D.**, Donmez, B., & Jamieson, G. A. (2024). Enhancing Human Performance with Post-hoc Explanations in Machine Learning-based Decision Support Systems. Oral presentation at the *7th International Conference on Intelligent Human Systems Integration: Integrating People and Intelligent Systems*, Palermo, Italy.
 
-**Gentile D.**, Jamieson G. A., Donmez B. (2021). Evaluating human understanding in XAI systems. Oral presentation at the ACM CHI Workshop on Operationalizing Human-Centered Perspectives in Explainable AI, CHI Conference on Human Factors in Computing Systems (CHI '21), Yokohama, Japan.
+**Gentile D.** (2023). Designing for human-AI interactions in industrial condition monitoring. Oral presentation at the *AI Seminar in GAIA (Global Artificial Intelligence Accelerator)*, Ericsson Montreal, QC.
 
-**Gentile D.** (2020). Human Factors in Explainable AI. Invited panelist at the 2021 Graduate Student Research Showcase. Faculty of Applied Science and Engineering, University of Toronto.
+**Gentile D.**, Jamieson G. A., Donmez B. (2021). Evaluating human understanding in XAI systems. Oral presentation at the *ACM CHI Workshop on Operationalizing Human-Centered Perspectives in Explainable AI, CHI Conference on Human Factors in Computing Systems (CHI '21)*, Yokohama, Japan (held remotely).
+
+**Gentile D.** (2020). Human Factors in Explainable AI. Invited panelist at the *2021 Graduate Student Research Showcase*. Faculty of Applied Science and Engineering, University of Toronto.
