--- a/blog.qmd
+++ b/blog.qmd
@@ -13,7 +13,7 @@ page-layout: full
 title-block-banner: false
 ---
 
-#### **Peer reviewed journal articles**
+##### **Peer reviewed journal articles**
 
 **Gentile D.**, Donmez, B., & Jamieson, G. A. (Accepted, 2024). Human performance effects of combining counterfactual explanations with normative and contrastive explanations in supervised machine learning for automated decision assistance. In the *International Journal of Human-Computer Studies*.
 
@@ -21,11 +21,15 @@ title-block-banner: false
 
 Nguyen, T., **Gentile D.**, Jamieson, G. A., Gosine, R., & Purmhedi, H. (2023). [Designing a Glyph-based Polar Chart to Interpret the Results of Machine Learning Models](https://journals.sagepub.com/doi/abs/10.1177/10648046231166047). In *Ergonomics in Design: The Quarterly of Human Factors Applications*.
 
-#### **Peer reviewed journal articles submitted** 
+\
 
-**Gentile D.**, Jamieson, G. A., & Donmez B. (2023). Influence of Individual Differences on the Effectiveness of Post-hoc Explanations in Automation Reliance Behavior. Submitted to the *Journal of Cognitive Engineering and Decision-Making*.
+##### **Peer reviewed conference/workshop proceedings**
 
-#### **Peer reviewed articles in preparation**
+**Gentile D.**, Jamieson G. A., Donmez B. (2021). [Evaluating Human Understanding in Explainable AI Systems](https://hfast.mie.utoronto.ca/wp-content/uploads/HCXAI2021_paper_25.pdf). In *ACM Human Factors in Computing Systems (CHI) Workshop on Operationalizing Human-Centered Perspectives in Explainable AI*, CHI2021, Yokohama, Japan.
+
+\
+
+##### **Articles in preparation**
 
 **Gentile D.**, & Jamieson, G. A. (2025). Effects of Automation transpareancy on human performance under different workload contrainsts. Human Factors.
 
@@ -33,11 +37,11 @@ Lawson-Jack K., **Gentile D.**, & Jamieson, G. A. (2025). Progress on a Taxonomy
 
 **Gentile D.**, Liang Y., & Jamieson, G. A. (2025). Assessing Measures of Human Performance in the Nuclear Control Room. In the *14th International Topical Meeting on* *Nuclear Plant Instrumentation and Control & Human-Machine Interface Technology (NPIC&HMIT)*, Chicago.
 
-#### **Peer reviewed conference/workshop proceedings**
+**Gentile D.**, Jamieson, G. A., & Donmez B. (2023). Influence of Individual Differences on the Effectiveness of Post-hoc Explanations in Automation Reliance Behavior. Submitted to the *Journal of Cognitive Engineering and Decision-Making*.
 
-**Gentile D.**, Jamieson G. A., Donmez B. (2021). [Evaluating Human Understanding in Explainable AI Systems](https://hfast.mie.utoronto.ca/wp-content/uploads/HCXAI2021_paper_25.pdf). In *ACM Human Factors in Computing Systems (CHI) Workshop on Operationalizing Human-Centered Perspectives in Explainable AI*, CHI2021, Yokohama, Japan.
+\
 
-#### **Presentations**
+##### **Presentations**
 
 **Gentile D.**, Jamieson G. A., Donmez B. (2024). Supporting human performance with explanation interfaces in automated decision assistance for process control operations. In *Disruptive, Innovative and Emerging Technologies (DIET) Conference 2024 of the Canadian Nuclear Society (CNS) (organized in cooperation with the International Atomic Energy Agency).*
 
