--- a/index.qmd
+++ b/index.qmd
@@ -1,6 +1,6 @@
 ---
-title: ""
-subtitle: ""
+#title: ""
+subtitle: "Davide Gentile"
 about:
   template: trestles
   image: images/profile2.jpg
@@ -9,11 +9,11 @@ about:
   links:
     - icon: file-earmark-person
       text: CV
-      href: https://twitter.com
+      href: resume_Gentile.pdf
 ---
 
 I am a postdoctoral researcher in the Cognitive Engineering Laboratory (CEL) at the University of Toronto.
 
-My research interests focus on developing systems and technologies that augment human performance and mitigate human errors, while supporting individual and societal well-being. Specifically, I work on supervisory control of automation, decision support systems and feedback mechanisms (e.g., transparency, explainability) that guide user behavior effectively.
+My research focuses on developing systems that augment human performance and mitigate human errors, while supporting individual and societal well-being. Specifically, I work on supervisory control of automation, human-system evaluation and feedback mechanisms (e.g., transparency, explainability) that guide user behavior effectively.
 
-At CEL, I lead a team of researchers on conducting experiments to study problems in supervisory control of small modular reactors.
+I have a background in cognitive science, computational linguistics and human-computer interaction. In my current role at CEL, I lead a team of researchers on conducting experiments to study problems in supervisory control of small modular reactors.
