--- a/index.qmd
+++ b/index.qmd
@@ -1,19 +1,13 @@
 ---
 #title: ""
-subtitle: "Davide Gentile"
+subtitle: "Welcome"
 about:
-  template: trestles
-  image: images/profile2.jpg
-  image-width: 10em
-  image-shape: rectangle
-  links:
-    - icon: file-earmark-person
-      text: Resume
-      href: resume.pdf
+  template: marquee
+  image: images/Roseto_Degli_Abruzzo.jpg
+  #links:
+    #- icon: file-earmark-person
+      #text: Resume
+      #href: resume.pdf
 ---
 
-I am a postdoctoral researcher in the Cognitive Engineering Laboratory (CEL) at the University of Toronto.
-
-My research focuses on developing systems that augment human performance and mitigate human errors, while supporting individual and societal well-being. Specifically, I work on **supervisory control** of automation, **human-system performance** evaluation, and **feedback mechanisms** (e.g., transparency, explainability) that guide user behavior effectively.
-
-I have a background in cognitive science, computational linguistics and human-computer interaction. In my current role at CEL, I lead a team of researchers on conducting experiments to study problems in supervisory control of small modular reactors.
+I created this space to collect some projects and ideas.
