--- a/index.qmd
+++ b/index.qmd
@@ -2,7 +2,7 @@
 #title: ""
 subtitle: "Welcome"
 about:
-  template: marquee
+  template: solana
   image: images/Roseto_Degli_Abruzzo.jpg
   #links:
     #- icon: file-earmark-person
