--- a/workposts/hf-nuclear/index.qmd
+++ b/workposts/hf-nuclear/index.qmd
@@ -5,6 +5,6 @@ date: "2024-09-24"
 image: "SMRs.png"
 ---
 
-SMR stands for Small Modular Reactors. Small Modular Reactors are modern types of reactors that presents novel characteristics compared to traditional reactors. These characteristics allow for remote monitoring and control of multiple facilities, which introduces a new set of human factors challenges related to the impact of control room design on human performance.
+Small Modular Reactors (SMRs) are modern types of reactors that presents novel characteristics compared to traditional reactors. These characteristics allow for remote monitoring and control of multiple facilities, which introduces a new set of human factors challenges related to the impact of control room design on human performance.
 
 ![The basic principle iPWR simulator setup in the Halden Future Lab](SMRs.png)
