--- a/about.qmd
+++ b/about.qmd
@@ -26,7 +26,7 @@ about:
       #href: https://open.spotify.com/user/1182380789?si=7ca4ee59ac0b4619
 ---
 
-Hello, my name is Davide Gentile.
+###### About
 
 I am a postdoctoral researcher in the Cognitive Engineering Laboratory (CEL) at the University of Toronto.
 
