--- a/index.qmd
+++ b/index.qmd
@@ -10,4 +10,4 @@ about:
       #href: resume.pdf
 ---
 
-I created this space to collect some projects and ideas.
+This website includes projects, code, and notes.
