--- a/index.qmd
+++ b/index.qmd
@@ -10,4 +10,4 @@ about:
       #href: resume.pdf
 ---
 
-This website includes projects, code, and notes.
+This website includes projects and notes on human factors / human-computer interaction research.
