--- a/blog.qmd
+++ b/blog.qmd
@@ -5,10 +5,10 @@ listing:
   contents: blogposts
   sort: "date desc"
   type: table
-  fields: [date, title, categories]
-  #categories: true
-  sort-ui: false
-  filter-ui: false
+  fields: [date, title, reading-time, categories]
+  categories: true
+  sort-ui: true
+  filter-ui: true
 page-layout: full
 title-block-banner: false
 ---
