--- a/about.qmd
+++ b/about.qmd
@@ -5,7 +5,7 @@ about:
   template: trestles
   image: images/profile2.jpg
   image-width: 10em
-  image-shape: rectangle
+  image-shape: round
   links:
      - icon: file-earmark-person
        text: Resume
@@ -26,10 +26,8 @@ about:
       #href: https://open.spotify.com/user/1182380789?si=7ca4ee59ac0b4619
 ---
 
-###### About
+Hello, I am a postdoctoral researcher in the Cognitive Engineering Laboratory (CEL) at the University of Toronto.
 
-I am a postdoctoral researcher in the Cognitive Engineering Laboratory (CEL) at the University of Toronto.
+My research focuses on designing automation tools that augment human performance. Specifically, I work on supervisory control of automation, human-system performance evaluation, and feedback mechanisms (e.g., transparency, explainability) that guide user behavior effectively.
 
-My research focuses on developing systems that augment human performance and mitigate human errors, while supporting individual and societal well-being. Specifically, I work on supervisory control of automation, human-system performance evaluation, and feedback mechanisms (e.g., transparency, explainability) that guide user behavior effectively.
-
-I have a background in cognitive science, computational linguistics and human-computer interaction. In my current role at CEL, I lead a team of researchers on conducting experiments to study problems in supervisory control of small modular reactors.
+In my current role at CEL, I lead a team of human factors researchers conducting experiments in monitoring and control of small modular reactors.
