--- a/blogposts/asking-causal-questions/index.qmd
+++ b/blogposts/asking-causal-questions/index.qmd
@@ -1,8 +1,8 @@
 ---
-title: "How to ask causal questions"
+title: "Asking better causal questions"
 author: "Davide Gentile"
 date: "2024-09-12"
-categories: [news]
+#categories: [news]
 ---
 
 This is the first post in a Quarto blog. Welcome!
