--- a/workposts/3-ericsson-project/index.qmd
+++ b/workposts/3-ericsson-project/index.qmd
@@ -5,8 +5,6 @@ date: "2024-08-12"
 #categories: [news]
 ---
 
-Here I report the development of a glyph-based polar chart (GPC), designed to support a comprehensive interpretation of the results of ML models by enabling data scientists to compare different explanation methods within the same model and across models.
+During my internship at Ericsson, we developed and evaluated a glyph-based polar chart (GPC). The GPC was designed to support a comprehensive interpretation of the results of ML models by enabling data scientists to compare different explanation methods within the same model and across models.
 
 ![](/images/polar.png)
-
-Since this post doesn't specify an explicit `image`, the first image in the post will be used in the listing page of posts.
